# pte-parallel-array-processing

./: .gitignore  CMakeLists.txt  README.md  results.txt  results_1000_seq.txt  results_5000_seq.txt
src/: array_initialization.c  array_initialization.h  average_calculation.c  average_calculation.h  file_processing.c  file_processing.h  float_handler.c  float_handler.h  get_averages_indicies.c  get_averages_indicies.h  main.c  param_handling.c  param_handling.h  usage.c  usage.h  write_out_averages_indicies.c  write_out_averages_indicies.h  write_result.c  write_result.h
src/structs/: params.h
src/test/: array_example_0.txt
test/: array_example_1.txt  array_example_100.txt  array_example_100_two_digits.txt  array_example_2.txt  array_example_20.txt  array_example_20_same_line.txt  array_example_20_two_digits.txt  array_example_3.txt  array_example_4.txt  array_example_5.txt  array_example_6.txt  array_example_7.txt
